Increase in slow SWEEP_MARK tasks in nightly builds 2019-10-22
Categories
(Core :: JavaScript: GC, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox70 | --- | unaffected |
firefox71 | --- | unaffected |
firefox72 | --- | fixed |
People
(Reporter: jonco, Assigned: allstars.chh)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
Telemetry detected an increase in slow SWEEP_MARK phases in nightly builds. This is probably due to bug 1564136 which landed during this period
Alert details: http://alerts.telemetry.mozilla.org/index.html#/detectors/1/metrics/2368/alerts/?from=2019-10-22&to=2019-10-22
Changes new to Nightly builds on 2019-10-22: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=563f437f24b9e12495b0f2c364538a2b8d8a0ca7&tochange=47d7c18620c845c3a42610fea5468ccc50889bae
The value of GC_SLOW_TASK over time: https://telemetry.mozilla.org/new-pipeline/evo.html#!measure=GC_SLOW_TASK
Reporter | ||
Comment 1•6 years ago
|
||
The 'slow phase' telemetry records any phase that goes 1.5 times or 5ms over its budget. The marking that we now do on a background thread during sweeping should be limited by the slice budged so it should not be possible for this to exceed its budget.
Yoshi, do you want to look into this?
Here's a better telemetry link. We're interesting in what's labelled as '10 bucket':
Assignee | ||
Updated•6 years ago
|
Assignee | ||
Comment 2•6 years ago
|
||
GCRuntime::joinTask will call recordParallelPhase(), and causes the parallel
duration is multiplied when we call joinTask(sweepMarkTask) multiple times.
Updated•6 years ago
|
Comment 4•6 years ago
|
||
bugherder |
Reporter | ||
Comment 5•6 years ago
|
||
We should leave this open until we can verify that we have fixed the problem. It usually takes a few days for telemetry to come through.
Reporter | ||
Updated•6 years ago
|
Updated•6 years ago
|
![]() |
||
Comment 6•6 years ago
|
||
bugherder landing |
Reporter | ||
Comment 7•6 years ago
|
||
Renaming this bug to be more specific because the telemetry alert was about the GC_SLOW_TASK histogram (for parallel tasks) rather than the GC_SLOW_PHASE histogram (work run on the main thread).
Reporter | ||
Comment 8•6 years ago
|
||
The telemetry has reverted to its previous state now.
Updated•6 years ago
|
Updated•6 years ago
|
Updated•4 years ago
|
Description
•