Bug 1591889 - bail out early if task is already joined. r=jonco

GCRuntime::joinTask will call recordParallelPhase(), and causes the parallel
duration is multiplied when we call joinTask(sweepMarkTask) multiple times.

Differential Revision: https://phabricator.services.mozilla.com/D50933