js/src/gc/GCParallelTask.h
@@ -102,14 +102,15 @@ class GCParallelTask : public RunnableTask {
     return ThreadType::THREAD_TYPE_GCPARALLEL;
   }
 
+  bool isNotStarted(const AutoLockHelperThreadState& lock) const {
+    return state_ == State::NotStarted;
+  }
+
  private:
   void assertNotStarted() const {
     // Don't lock here because that adds extra synchronization in debug
     // builds that may hide bugs. There's no race if the assertion passes.
     MOZ_ASSERT(state_ == State::NotStarted);
-  }
-  bool isNotStarted(const AutoLockHelperThreadState& lock) const {
-    return state_ == State::NotStarted;
   }
   bool isDispatched(const AutoLockHelperThreadState& lock) const {
     return state_ == State::Dispatched;
